--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Send a newsletter.
 on:
   schedule:
     # every hour.
-    - cron: "5 * * * *"
+    - cron: "*/5 * * * *"
 
   repository_dispatch:
     types: manual-trigger
@@ -18,15 +18,19 @@ jobs:
 
       - name: Decrypt .env.gpg => .env
         env:
-          SYMMETRIC_KEY: ${{ secrets.SYMMETRIC_KEY }}
-        run: gpg --quiet --batch --yes --decrypt --passphrase="$GPG_KEY" --output=.env .env.gpg
+          SYMMETRIC_KEY: ${{ secrets.GPG_KEY }}
+        run: gpg --quiet --batch --yes --decrypt --passphrase="$SYMMETRIC_KEY" --output=.env .env.gpg
 
       - name: Run the process
-        run: export $(cat .env | xargs) && pipenv run python main.py
+        run: |
+          UNTIL=$(echo date +%Y-%m-%d)
+          SINCE=$(date -d "$date -7 days" +"%Y-%m-%d")
+          SINCE="echo ${SINCE}"
+          export $(cat .env | xargs) && pipenv run python main.py --since $SINCE --until $UNTIL
 
       - name: Encrypt .env => .env.gpg
         env:
-          SYMMETRIC_KEY: ${{ secrets.SYMMETRIC_KEY }}
+          SYMMETRIC_KEY: ${{ secrets.GPG_KEY }}
         run: echo "$SYMMETRIC_KEY" | gpg --symmetric --batch --passphrase-fd 0 .env
 
       - name: Push .env.gpg
