fix: update cron schedule
Every Monday midnight (UTC)

- 5pm in PST
- 9am in KST

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,9 @@ name: Send a newsletter.
 
 on:
   schedule:
-    # every hour.
-    - cron: "*/5 * * * *"
+    # Run at midnight UTC on Monday
+    # Use https://crontab.guru/
+    - cron: "0 0 * * MON"
 
   repository_dispatch:
     types: manual-trigger
