--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,22 +19,15 @@ jobs:
       - name: Decrypt .env.gpg => .env
         env:
           SYMMETRIC_KEY: ${{ secrets.GPG_KEY }}
-        run: |
-          echo $SYMMETRIC_KEY > key
-          gpg2 --import key
-          gpg2 --quiet --batch --yes --decrypt --output=.env .env.gpg
+        run: gpg --quiet --batch --yes --decrypt --passphrase="$SYMMETRIC_KEY" --output=.env .env.gpg
 
       - name: Run the process
-        run: |
-          UNTIL=$(echo date +%Y-%m-%d)
-          SINCE=$(date -d "$date -7 days" +"%Y-%m-%d")
-          SINCE="echo ${SINCE}"
-          export $(cat .env | xargs) && pipenv run python main.py --since $SINCE --until $UNTIL
+        run: export $(cat .env | xargs) && pipenv run python main.py
 
       - name: Encrypt .env => .env.gpg
         env:
           SYMMETRIC_KEY: ${{ secrets.GPG_KEY }}
-        run: gpg2 --symmetric --batch .env
+        run: echo "$SYMMETRIC_KEY" | gpg --symmetric --batch --passphrase-fd 0 .env
 
       - name: Push .env.gpg
         run: |
