--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,12 @@ jobs:
         run: gpg --quiet --batch --yes --decrypt --passphrase="$SYMMETRIC_KEY" --output=.env .env.gpg
 
       - name: Run the process
-        run: export $(cat .env | xargs) && pipenv run python main.py
-
+        run: |
+          UNTIL=$(echo date +%Y-%m-%d)
+          SINCE=$(date -d "$date -7 days" +"%Y-%m-%d")
+          SINCE="echo ${SINCE}"
+          export $(cat .env | xargs) && pipenv run python main.py --since $SINCE --until $UNTIL
+          
       - name: Encrypt .env => .env.gpg
         env:
           SYMMETRIC_KEY: ${{ secrets.GPG_KEY }}
