--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Install pipenv
+        uses: dschep/install-pipenv-action@v1        
 
       - name: Decrypt .env.gpg => .env
         env:
