--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,16 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: conda setup
+        uses: goanpeca/setup-miniconda@v1
+        with:
+          activate-environment: fb-scrapper
+          environment-file: ./environments.yml
+          python-version: 3.8
+          auto-activate-base: true
 
-      - name: Install pipenv
-        uses: dschep/install-pipenv-action@v1        
+#       - name: Install pipenv
+#         uses: dschep/install-pipenv-action@v1        
 
       - name: Decrypt .env.gpg => .env
         env:
