--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           activate-environment: fb-scrapper
           environment-file: ./environments.yml
           python-version: 3.8
-          auto-activate-base: true
+          auto-activate-base: false
 
 #       - name: Install pipenv
 #         uses: dschep/install-pipenv-action@v1        
