--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run the process
         run: |
-          UNTIL=$(echo date +%Y-%m-%d)
+          UNTIL="date +%Y-%m-%d"
           SINCE=$(date -d "$date -7 days" +"%Y-%m-%d")
           SINCE="echo ${SINCE}"
           export $(cat .env | xargs) && pipenv run python main.py --since $SINCE --until $UNTIL
