--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
 
       - name: Run the process
         run: |
-          UNTIL="date +%Y-%m-%d"
-          SINCE=$(date -d "$date -7 days" +"%Y-%m-%d")
-          SINCE="echo ${SINCE}"
+          export UNTIL="date +%Y-%m-%d"
+          export SINCE=$(date -d "$date -7 days" +"%Y-%m-%d")
+          export SINCE="echo ${SINCE}"
           export $(cat .env | xargs) && pipenv run python main.py --since $SINCE --until $UNTIL
           
       - name: Encrypt .env => .env.gpg
