--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,17 @@ jobs:
       - name: Install dependencies
         run: pipenv install
 
+      - name: Get current date
+        id: current_date
+        run: echo "::set-output UNTIL=date::$(date +'%Y-%m-%d')"
+      
+      - name: Get past 7 date
+        id: past_date
+        run: echo "::set-output SINCE=$(date -d \"$date -7 days\" +"%Y-%m-%d")"
+
       - name: Run the process
-        run: |
-          export UNTIL="date +%Y-%m-%d"
-          export SINCE=$(date -d "$date -7 days" +"%Y-%m-%d")
-          export SINCE="echo ${SINCE}"
-          export $(cat .env | xargs) && pipenv run python main.py --since $SINCE --until $UNTIL
+        run: 
+          export $(cat .env | xargs) && pipenv run python main.py --since ${{ steps.past_date.output.SINCE }} --until ${{ steps.current_date.output.UNTIL }}
           
       - name: Encrypt .env => .env.gpg
         env:
