--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,11 @@ jobs:
       
       - name: Get past 7 date
         id: past_date
-        run: echo "::set-output name=SINCE::$(date -d \"$date -7 days\" +"%Y-%m-%d")"
+        run: echo "::set-output name=SINCE::$(date --date='7 days ago' +%Y-%m-%d)"
 
       - name: Run the process
         run: 
-          export $(cat .env | xargs) && pipenv run python main.py --since ${{ steps.past_date.output.SINCE }} --until ${{ steps.current_date.output.UNTIL }}
+          export $(cat .env | xargs) && pipenv run python main.py --since ${{ steps.past_date.outputs.SINCE }} --until ${{ steps.current_date.outputs.UNTIL }}
           
       - name: Encrypt .env => .env.gpg
         env:
