--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,10 @@ jobs:
       - name: Run the process
         run: 
           export $(cat .env | xargs) && pipenv run python main.py --since ${{ steps.past_date.outputs.SINCE }} --until ${{ steps.current_date.outputs.UNTIL }}
-          
+        
+      - name: Remove .env.gpg
+        run: rm .env.gpg  
+        
       - name: Encrypt .env => .env.gpg
         env:
           SYMMETRIC_KEY: ${{ secrets.GPG_KEY }}
