--- a/.github/workflows/every_wed.yml
+++ b/.github/workflows/every_wed.yml
@@ -3,7 +3,7 @@ name: Send a newsletter.
 on:
   schedule:
     # every 4am(UTC) which is 1pm in Korea
-    - cron: "0 4 * * *"
+    - cron: "0 8 * * Wed"
 
   repository_dispatch:
     types: manual-trigger
@@ -36,7 +36,7 @@ jobs:
       
       - name: Get past -n date
         id: past_date
-        run: echo "::set-output name=SINCE::$(date --date='1 days ago' +%Y-%m-%d)"
+        run: echo "::set-output name=SINCE::$(date --date='3 days ago' +%Y-%m-%d)"
 
       - name: Run the process
         run: 
