--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -2,8 +2,8 @@ name: newsletter_every_fri
 
 on:
   schedule:
-    # every 9am(UTC) which is 5pm in Korea on Friday
-    - cron: "0 8 * * FRI"
+    # every 3am(UTC) which is 12pm in Korea on Friday
+    - cron: "0 3 * * FRI"
 
   repository_dispatch:
     types: manual-trigger
@@ -30,17 +30,16 @@ jobs:
       - name: Install dependencies
         run: pipenv install
 
-      - name: Get current date
-        id: current_date
-        run: echo "::set-output name=UNTIL::$(date +'%Y-%m-%d')"
-      
-      - name: Get past -n date
-        id: past_date
-        run: echo "::set-output name=SINCE::$(date --date='7 days ago' +%Y-%m-%d)"
+      - name: Set Variables
+        id: var
+        run: |
+          echo "::set-output name=SINCE::$(date --date='7 days ago' +%Y-%m-%d)"
+          echo "::set-output name=UNTIL::$(date +'%Y-%m-%d')"
+          echo "::set-output name=TITLE::TF-KR 주간 뉴스레터"  
 
-      - name: Run the process
+      - name: Sending out Email
         run: 
-          export $(cat .env | xargs) && pipenv run python main.py --since ${{ steps.past_date.outputs.SINCE }} --until ${{ steps.current_date.outputs.UNTIL }}
+          export $(cat .env | xargs) && pipenv run python main.py --since ${{ steps.var.outputs.SINCE }} --until ${{ steps.var.outputs.UNTIL }} --email-title '${{ steps.var.output.TITLE }}'
         
       - name: Remove .env.gpg
         run: rm .env.gpg  
