--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Sending out Email
         run: 
-          export $(cat .env | xargs) && pipenv run python main.py --since ${{ steps.var.outputs.SINCE }} --until ${{ steps.var.outputs.UNTIL }} --email-title '${{ steps.var.output.TITLE }}'
+          export $(cat .env | xargs) && pipenv run python main.py --since ${{ steps.var.outputs.SINCE }} --until ${{ steps.var.outputs.UNTIL }} --email-title '${{ steps.var.outputs.TITLE }}'
         
       - name: Remove .env.gpg
         run: rm .env.gpg  
