--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'deep.diver.csp@gmail.com'
-                    
+          
+          git pull
           git commit -am 'Updating .env.gpg'
           git push
